Z-index of top menu is biggest to ensure it is always on top of every other page element

--- a/buddycloud-theme/static/css/buddycloud-style.css
+++ b/buddycloud-theme/static/css/buddycloud-style.css
@@ -477,6 +477,7 @@ ul.nav-tabs > li a:hover {
 
 .navbar {
 	min-height: 3em;
+	z-index: 4000;
 }
 
 .navbar-nav {
